Scroll bar for dropdown and column visibility issue fix

--- a/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/reports/index.scss
@@ -78,7 +78,9 @@
 // table.dataTable td {
 //   word-break: break-word;
 // }
-
+.dropdown-menu {
+  display: block !important;
+}
 .dropdown-menu > .active > a  {
   background-color: #fe7a51!important;
   color: #000!important;
